contact us alignment issue fixed

--- a/css/main.css
+++ b/css/main.css
@@ -881,7 +881,6 @@ textarea.form-control {
 }
 
 .contact-info {
-  padding-left:70px;
   font-weight: 300;
 }
 
